--- a/assets/scss/_typography.css
+++ b/assets/scss/_typography.css
@@ -58,6 +58,10 @@ h6 {
   .popup-newsletter--body--text b {
     font-family: 'ratio_medium'; }
 
+a {
+  color: inherit !important;
+  text-decoration: none; }
+
 h1 {
   font-size: 4em;
   line-height: 1.1;
